added issue tracking link

--- a/Website/index.html
+++ b/Website/index.html
@@ -35,6 +35,11 @@
         <a><strong>GitHub:<br /></strong></a>
         <a href = "https://github.com/stratx21/SoftwareEngineeringIGroupProject">Click here to go to the project's GitHub page!</a>
         <a><br /><br /></a>
+        <a href = "
+https://github.com/stratx21/SoftwareEngineeringIGroupProject/issues">Click here for issue tracking!</a>
+        
+        <a><br /><br /></a>
+        
         <a><strong>Project Iterations:<br /></strong></a>
         <a href = "./cerny.png" download>Iteration 1</a>
         <a><br /><br /></a>
