added pdf for iteration 1 download

--- a/Website/index.html
+++ b/Website/index.html
@@ -41,7 +41,7 @@ https://github.com/stratx21/SoftwareEngineeringIGroupProject/issues">Click here 
         <a><br /><br /></a>
         
         <a><strong>Project Iterations:<br /></strong></a>
-        <a href = "./cerny.png" download>Iteration 1</a>
+        <a href = "./Iteration 1 Final Draft.pdf" download>Iteration 1</a>
         <a><br /><br /></a>
     </div>
       
